making sure scss is set up properly for partials

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -1,3 +1,6 @@
+@import './partials/variables';
+
 body {
-    background-color: peachpuff;
+    font-size: 100px;
+    background-color: $primary;
 }
