a lot of stuff becuse i forgot to acp

--- a/styles/scss/partials/_variables.scss
+++ b/styles/scss/partials/_variables.scss
@@ -1,2 +1,11 @@
-$primary: paleturquoise;
-$secondary: peachpuff;
+$primaryFontColour: #fff;
+$secondaryFontColour: #fdfd96;
+$tertiaryFontColour: #000;
+
+$textContrastColour: #171c1ccc;
+
+$primaryAccentColour: #1a2a6c;
+$secondaryAccentColour: #0575E6;
+$tertiaryAccentColour: #ffbb00;
+
+$baseFontType: 'Roboto', sans-serif;
