--- a/styles/scss/partials/_variables.scss
+++ b/styles/scss/partials/_variables.scss
@@ -9,3 +9,4 @@ $secondaryAccentColour: #0575E6;
 $tertiaryAccentColour: #ffbb00;
 
 $baseFontType: 'Roboto', sans-serif;
+$headerFontType: 'Lobster', cursive;
