--- a/styles/scss/partials/_form.scss
+++ b/styles/scss/partials/_form.scss
@@ -8,17 +8,17 @@
     padding: 12px 20px;
     border-radius: 10px;
     margin-top: 30px;
-    font-weight: 700;
     font-size: 1rem;
     }
     input, textarea {
         &:focus, &:hover {
-            background-color: $secondaryFontColour;
+            background-image: linear-gradient($secondaryFontColour, $primaryFontColour);
         }
     }
     div.identity {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
     input {
         width: 49%;
@@ -26,12 +26,6 @@
     textarea {
         align-self: center;
         width: 100%;
-    }
-    button {
-        background-color: $secondaryFontColour;
-        &:hover, &:focus {
-            background-color: $tertiaryAccentColour;
-        }
     }
     // ::placeholder {
     // }
