--- a/styles/scss/partials/_sections.scss
+++ b/styles/scss/partials/_sections.scss
@@ -16,9 +16,9 @@ section:nth-child(2n) {
     align-self: flex-end;
 }
 
-// header section
-.home {
-    width: 100%;
+.about {
+    display: flex;
+    flex-direction: column;
 }
 
 // skills!
@@ -41,6 +41,41 @@ section:nth-child(2n) {
             font-size: 2.4rem;
             margin-bottom: 5px;
         }
+    }
+}
+
+// portfolio
+.project {
+    border-bottom: 3px solid $tertiaryAccentColour;
+    border-radius: 15px;
+    padding: 25px;
+    p {
+        margin-bottom: 15px;
+    }
+    a {
+        display: inline-block;
+        border-radius: 15px;
+        text-decoration: none;
+        padding: 8px;
+        border: 3px solid $tertiaryAccentColour;
+        margin-bottom: 5px;
+    }
+}
+.skills-used {
+    margin-bottom: 15px;
+    i {
+        font-size: 1.1rem;
+        margin-right: 10px;
+        border-right: 2px solid $primaryFontColour;
+        padding-right: 15px;
+    }
+    i:last-of-type {
+        border-right: none;
+        margin-right: 0;
+        padding-right: 0;
+    }
+    i:hover, i:focus {
+        color: $tertiaryAccentColour;
     }
 }
 
