added an event listener to the form so that i had something in my js file

--- a/styles/scss/partials/_sections.scss
+++ b/styles/scss/partials/_sections.scss
@@ -19,6 +19,14 @@ section:nth-child(2n) {
 .about {
     display: flex;
     flex-direction: column;
+    // tiltin the big bear!!!
+    img {
+        transition: 1s linear;
+    }
+    
+    img:hover {
+        transform: rotate(-10deg);
+    }
 }
 
 // skills!
