--- a/styles/scss/partials/_variables.scss
+++ b/styles/scss/partials/_variables.scss
@@ -4,9 +4,9 @@ $tertiaryFontColour: #000;
 
 $textContrastColour: #171c1ccc;
 
-$primaryAccentColour: #1a2a6c;
-$secondaryAccentColour: #0575E6;
-$tertiaryAccentColour: #ffbb00;
+$primaryAccentColour: #191654;
+$secondaryAccentColour: #43C6AC;
+$tertiaryAccentColour: #EE964B;
 
 $baseFontType: 'Roboto', sans-serif;
-$headerFontType: 'Lobster', cursive;
+$headerFontType: 'Fira Sans', sans-serif;
