--- a/styles/scss/partials/_sections.scss
+++ b/styles/scss/partials/_sections.scss
@@ -1,7 +1,7 @@
 // base section styling
 section {
     border: 1px solid $textContrastColour;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: $textContrastColour;
     margin: 30px;
     padding: 30px;
@@ -21,11 +21,11 @@ section:nth-child(2n) {
     flex-direction: column;
     // tiltin the big bear!!!
     img {
-        transition: 1s linear;
+        transition: 0.5s linear;
+        margin-bottom: 15px;
     }
-    
     img:hover {
-        transform: rotate(-10deg);
+        transform: rotate(-2deg);
     }
 }
 
@@ -37,7 +37,7 @@ section:nth-child(2n) {
         li {
             margin: 20px;
             text-align: center;
-            transition-duration: 0.4s;
+            transition-duration: 0.3s;
             &:focus, &:hover {
                 i, p {
                     color: $tertiaryAccentColour; 
@@ -55,14 +55,14 @@ section:nth-child(2n) {
 // portfolio
 .project {
     border-bottom: 3px solid $tertiaryAccentColour;
-    border-radius: 15px;
+    border-radius: 8px;
     padding: 25px;
     p {
         margin-bottom: 15px;
     }
     a {
         display: inline-block;
-        border-radius: 15px;
+        border-radius: 5px;
         text-decoration: none;
         padding: 8px;
         border: 3px solid $tertiaryAccentColour;
@@ -95,6 +95,9 @@ section:nth-child(2n) {
 .my-links {
     a {
         text-decoration: none;
+        i {
+            transition-duration: 0.3s;
+        }
         &:focus, &:hover {
             i {
                 color: $tertiaryAccentColour;
