--- a/styles/scss/partials/_sidebar-nav.scss
+++ b/styles/scss/partials/_sidebar-nav.scss
@@ -22,6 +22,7 @@ nav {
         min-height: 60px;
         border-bottom: 2px solid $secondaryFontColour;
     }
+    // figure out a way with positioning to add that extra px width from translateX to the nav and position it left: -?px; so the slide out colour looks like consistent and shit
     a {
         display: flex;
         flex-direction: column;
@@ -30,13 +31,13 @@ nav {
         height: 100px;
         width: 100%;
         text-decoration: none;
-        transition-duration: 0.6s;
+        transition-duration: 0.5s;
         &:hover, &:focus {
             p, i{
                 color: $tertiaryFontColour; 
             }
             background-color: $secondaryFontColour;
-            transform: rotate(10deg);
+            transform: translateX(15px);
         }
     }
     i {
