--- a/styles/scss/partials/_media-queries.scss
+++ b/styles/scss/partials/_media-queries.scss
@@ -13,14 +13,15 @@
     }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 600px) {
     section {
         padding: 15px;
     }
-
     header {
-        font-size: 2.5rem;
         padding: 0 5%;
+    }
+    h1 {
+        font-size: 2.5rem;
     }
     h2, h3, p {
         text-align: center;
@@ -31,12 +32,18 @@
         flex-direction: column;
         align-items: center;
     }
+    .contact-info {
+        flex-direction: column;
+        align-items: center;
+    }
+    .my-links {
+        margin-top: 15px;
+    }
     .contact-form input {
         width: 100%;
     }
 
     // navigation
-
     header, main {
         margin-left: 0px;
     }
